<?xml version="1.0"?>
<package format="3">
  <name>ros2_cmv_example</name>
  <version>0.1.0</version>
  <description>A package that has an example message for ros2_cmv package</description>

  <maintainer email="rssuchetan@gmail.com">Suchetan R S</maintainer>
  <license>MIT</license>

  <depend>rosidl_default_generators</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>